# spin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/spin/: arguments.rs  echo.rs  post_process.rs  spin.rs  uuid.rs
