[package]
name = "spin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spin"
path = "src/main.rs"

[lib]
name = "spin"
path = "src/spin/spin.rs"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
regex = { version = "1" }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binarya